# HelloWorldWithActions

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-ninja-vcpkg.yml  cmake.yml
src/: main.cpp
